# rocket-api

./: .env  .gitignore  Cargo.toml  Rocket.toml  readme.md
.github/workflows/: rust.yml
migrations/2022-04-01-234418_sotck_api/: up.sql
model/: model.json
predict/: output2
src/: main.rs  middleware.rs  models.rs  schema.rs  vpt.rs
templates/: base.html.tera  index.html.tera  stock.html.tera
tmp/: output  price.csv  price.txt  vol.txt  vpts.csv  vpts.txt
